--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px 24px;
-    border-bottom: 1px solid #eee;
+    /* border-bottom: 1px solid #eee; */
     position: relative;
     background: #fff;
   }
@@ -45,7 +45,7 @@
     gap: 20px;
     padding: 15px 0;
     margin: 0;
-    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
   }
   
   .nav-links li {
@@ -64,6 +64,7 @@
   @media (max-width: 768px) {
     .navbar{
         padding: 12px 10px;
+        border-bottom: 1px solid #eee;
     }
 
     .nav-links {
